fixed styling for cards so everything is aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ button:hover {
     width: 200px;
     height: 100px;
     margin-left: 30px;
+    background-color: #e9c3b1;
     
 }
 
